--- a/ste.css
+++ b/ste.css
@@ -78,4 +78,9 @@ body {
   .box img:hover {
     transform: scale(1.1); /* Adjust the scale value to your preference */
   }
+  button{
+      background-color: blue;
+      color: white;
+      padding: 8px;
+  }
   
